--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 
 body {
-    background: linear-gradient(135deg, #3494E6, #EC6EAD);
-    background-size: 200% 200%;
+    background: linear-gradient(135deg, #3494E6, #EC6EAD)  no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     animation: gradientAnimation 10s infinite;
     font-family: Arial, sans-serif;
     margin: 0;
