bug fix and add shake input box instead of alert

--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,18 @@ button {
 #download-link:hover {
     background-color: black;
 }
+
+/** input box shake animation while pressing generate button without typing anything **/
+/* >>>>>>>>>>>>>>>>>>>> */
+@keyframes shake {
+    0% { transform: translateX(0); }
+    20% { transform: translateX(-7px); }
+    40% { transform: translateX(7px); }
+    60% { transform: translateX(-7px); }
+    80% { transform: translateX(7px); }
+    100% { transform: translateX(0); }
+}
+
+.shake {
+    animation: shake 0.3s;
+}
